Добавлены запросы, исправлен equals у Book
- В OrdersManager добавлено новое поле: requests. Теперь запросы создаются, если создаётся заказ на книгу, которой нет в наличии. Изменена логика обработки заказов в соответствии с условиями, присутствует обработка запросов на книги.
- Исправлен косяк в переопределении equals у Book